	hardcoding them in gaphor/ui/stock.py.
	* setup.py, MANIFEST.in: added icons.xml
	* gaphor/ui/stock.py: use icons.xml. Added an XML parser.
	* gaphor/ui/mainwindow.py, mainactions.py: added About dialog.
	* gaphor/diagram/interface.py: make it work
	* gaphor/diagram/actions.py: added placement tool and action for
	interfaces (creates both an interface and an Implementation
	dependency.

2004-05-25  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/mainactions.py: Do loading and saving in a separate
	thread. This makes the UI react more smoothly (and we can do some
	progress indicating in the near future).
	* gaphor/misc/aspects.py: Added TimerAspect (a per function profiler)
	* gaphor/ui/namespace.py: Now sorting works okay. Implemented faster
	sorting algorithm.
	* gaphor/diagram/dependency.py: Added load/save instructions for
	dependency_type.
	* gaphor/diagram/interface.py: new file, representing an Interface.

2004-05-24  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/menufactory.py: fixed a few bugs
	* gaphor/diagram/relationship.py: made a generic find_relationship()
	function.
	* gaphor/diagram/(dependency|generalization|flow).py: use this
	function.

2004-05-17  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/action.py: no longer register actions as stock items.
	* gaphor/ui/menufactory.py: make accelerators work for menu items.

2004-05-13  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/pixmaps/extension24.png initalnode24.png,
	activityfinalnode24.png, activityfinalnode.xcf: added
	* gaphor/ui/stock.py: added the new icons as stock icons.
	* data/pixmaps/: removed unused (old) icons. Added icons for Actions,
	stereotype, extension, etc.
	

2004-05-12  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/extension.py: new file. Used to create stereotypes
	* gaphor/diagram/klass.py: started implementing stereotypes.
	* gaphor/diagram/dependency.py: Now one can add several dependency